--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "server/models/event.js",
+    "server/models/eventtag.js"
   ],
   "exclude": [
     "node_modules"
