--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "mysql2": "^3.14.0",
     "next": "15.2.4",
+    "next-connect": "^1.0.0-next.4",
+    "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sequelize": "^6.37.7",
